re-style contact page

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <div class="container">
             <form action="index.html" method="GET">
                 <div class="row contact">
-                    <div class="col-sm">
+                    <div class="col-12">
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">First Name</label>
                             <input type="text" class="form-control" id="exampleFormControlInput1"
@@ -74,10 +74,12 @@
                         <input class="btn-custom" type="submit" value="Submit">
                         <input class="btn-custom" type="reset" value="Reset">
                     </div>
-                    <div class="col-sm">
-                        <h3>Find Us Here</h3>
+                </div>
+                <div class="row contact">
+                    <div class="col-12">
                         <iframe class="map"
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2842.288862470542!2d-1.0535659817457497!3d53.198651551393155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1632911805703!5m2!1sen!2suk"></iframe>
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2842.288862470542!2d-1.0535659817457497!3d53.198651551393155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1632911805703!5m2!1sen!2suk">
+                        </iframe>
                     </div>
                 </div>
             </form>
