--- a/area.html
+++ b/area.html
@@ -77,7 +77,7 @@
     </section>
     <section>
         <div class="container">
-            <div class="row-robin-hood">
+            <div class="row row-robin-hood">
                 <div class="col">
                     <h3>The Famous Robin Hood</h3>
                     <p>Robin Hood is an iconic figure to the Nottinghamshire area. He was known to be a crafty
@@ -89,12 +89,12 @@
         </div>
         <div class="container">
             <div class="row oak">
-                <div class="col-sm">
+                <div class="col-lg">
                     <h3>The Major Oak</h3>
                     <p>Robin Hoods Residence</p>
                     <img src="assets/images/major-oak.jpg" alt="The Major Oak">
                 </div>
-                <div class="col-sm">
+                <div class="col-lg">
                     <h3>Robin Hood Statue</h3>
                     <p>Always found with a Bow and Arrow in hand!</p>
                     <img src="assets/images/robin-hood.jpg" alt="Robin Hood Statue">
