text edit on activities page, change out over use of exclamation marks for full stops

--- a/activities.html
+++ b/activities.html
@@ -57,7 +57,7 @@
                         We have placed numerous amounts of drink stations and toilets around the park.
                         All facilities will be marked on a map given to you on entrance to the park so please keep this
                         with you.
-                        Please see all routes below </p>
+                        Please see all routes below - </p>
                     <ul class="cycling-routes">
                         <li>Beginner Routes
                             <ul class="routes">
@@ -84,11 +84,11 @@
                 <div class="col activity-text">
                     <h3>Hiking Routes <i class="fas fa-hiking"></i></h3>
                     <p>Explore the 500 acre park through our beautiful hiking routes. Our hiking routes have drinks
-                        stations and toilets dotted around so no need to worry! Our team of rangers are consistently
+                        stations and toilets dotted around so no need to worry. Our team of rangers are consistently
                         driving round the park doing their day to day roles, but fear not they are there to help you
-                        if needs be!
+                        if needs be.
                         <br>
-                        We suggest you cater 3 hours of your day if you wish to see everything the park has to offer
+                        We suggest you cater 3 hours of your day... if you wish to see everything the park has to offer.
                     </p>
                 </div>
             </div>
@@ -96,8 +96,8 @@
                 <div class="col-12 activity-text">
                     <h3>Glamping Site <i class="fas fa-campground"></i></h3>
                     <img src="assets/images/pod.jpg" class="pod" alt="glamping pod rental">
-                    <p>We have 15 glamping pods available to book now! All glamping customers get free entry into
-                        the park!
+                    <p>We have 15 glamping pods available to book now. All glamping customers get free entry into
+                        the park.
                         <br>
                         All Pods Include -
                     </p>
