--- a/area.html
+++ b/area.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col-lg">
                     <h3>Robin Hood Statue</h3>
-                    <p>Always found with a Bow and Arrow in hand!</p>
+                    <p>Always found with a Bow and Arrow in hand.</p>
                     <img src="assets/images/robin-hood.jpg" alt="Robin Hood Statue">
                 </div>
             </div>
