format code with prettier extension

--- a/contact.html
+++ b/contact.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet">
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <title>Thoresby Vale Country Park</title>
 </head>
 
@@ -28,17 +28,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" aria-current="page"
+                        <a class="nav-link nav-link-custom" style="color: yellow" aria-current="page"
                             href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" href="activities.html">Activities</a>
+                        <a class="nav-link nav-link-custom" style="color: yellow" href="activities.html">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" href="area.html">Area</a>
+                        <a class="nav-link nav-link-custom" style="color: yellow" href="area.html">Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom active" style="color:yellow" href="contact.html">Contact</a>
+                        <a class="nav-link nav-link-custom active" style="color: yellow" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -52,27 +52,27 @@
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">First Name</label>
                             <input type="text" class="form-control" id="exampleFormControlInput1"
-                                placeholder="First Name">
+                                placeholder="First Name" />
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput2" class="form-label">Surname</label>
                             <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="Surname"
-                                required>
+                                required />
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput2" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="exampleFormControlInput3"
-                                placeholder="name@example.com" required>
+                                placeholder="name@example.com" required />
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Your Enquiry</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"
                                 placeholder="Please enter your enquiry (including booking dates if applicable)"
-                                required> </textarea>
-
+                                required>
+								</textarea>
                         </div>
-                        <input class="btn-custom" type="submit" value="Submit">
-                        <input class="btn-custom" type="reset" value="Reset">
+                        <input class="btn-custom" type="submit" value="Submit" />
+                        <input class="btn-custom" type="reset" value="Reset" />
                     </div>
                 </div>
                 <div class="row contact">
@@ -90,13 +90,16 @@
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
                 <div class="col">
-                    <a href="http://facebook.com" rel="noopener" target="_blank"> <i class="fab fa-facebook"></i></a>
+                    <a href="http://facebook.com" rel="noopener" target="_blank">
+                        <i class="fab fa-facebook"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://twitter.com" rel="noopener" target="_blank"> <i class="fab fa-twitter"></i></a>
+                    <a href="http://twitter.com" rel="noopener" target="_blank">
+                        <i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://instagram.com" rel="noopener" target="_blank"> <i class="fab fa-instagram"></i></a>
+                    <a href="http://instagram.com" rel="noopener" target="_blank">
+                        <i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -104,7 +107,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
-
 </body>
 
 </html>
