--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Thoresby Vale Country Park Information Website">
-  <meta name="keywords" content="thoresby vale, hiking, cycling, glamping, edwinstowe">
-  <meta name="author" content="Nathan Cave">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Thoresby Vale Country Park Information Website" />
+  <meta name="keywords" content="thoresby vale, hiking, cycling, glamping, edwinstowe" />
+  <meta name="author" content="Nathan Cave" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet">
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
   <title>Thoresby Vale Country Park</title>
 </head>
 
@@ -52,18 +52,18 @@
       <div class="row">
         <div class="col-xl">
           <h3>Walking Routes</h3>
-          <img src="assets/images/thoresby-vale.webp" alt="Park CGI plan">
+          <img src="assets/images/thoresby-vale.webp" alt="Park CGI plan" />
         </div>
         <div class="col-xl">
           <h3>Beautiful Forestry</h3>
-          <img src="assets/images/forest.webp" alt="forestry surroundings">
+          <img src="assets/images/forest.webp" alt="forestry surroundings" />
         </div>
         <div class="col-xl">
           <h3>Glamping Pods Available</h3>
-          <img src="assets/images/glamping.webp" alt="glamping pods on offer at the park">
+          <img src="assets/images/glamping.webp" alt="glamping pods on offer at the park" />
         </div>
       </div>
-      <br>
+      <br />
     </div>
   </section>
   <!--introduction text section-->
@@ -71,15 +71,32 @@
     <div class="container-fluid">
       <div class="row row-home">
         <div class="col welcome">
-          <h3> <i class="fas fa-tree"></i> The Thoresby Vale Experience <i class="fas fa-tree"></i> </h3>
-          <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of
-            Thoresby, or an intense cycle route with plenty of jumps and challenging terrain for the experienced
-            cyclists.
+          <h3>
+            <i class="fas fa-tree"></i> The Thoresby Vale Experience
+            <i class="fas fa-tree"></i>
+          </h3>
+          <p>
+            We offer an abundance of activities to suit all needs. Whether
+            that be a challenging hike up the hills of Thoresby, or an intense
+            cycle route with plenty of jumps and challenging terrain for the
+            experienced cyclists.
           </p>
-          <p> Entrance Prices start at £5 per car *which include a 10% voucher redeemable at the Miners Cafe*</p>
-          <h3> <i class="fas fa-campground"></i> Why not extend your stay? <i class="fas fa-campground"></i></h3>
-          <p>Take advantage of our brand new Glamping pods for your next getaway.</p>
-          <p>Glamping Pod Prices Vary from Duration / Time of Year. Please get in touch to discuss your booking!</p>
+          <p>
+            Entrance Prices start at £5 per car *which include a 10% voucher
+            redeemable at the Miners Cafe*
+          </p>
+          <h3>
+            <i class="fas fa-campground"></i> Why not extend your stay?
+            <i class="fas fa-campground"></i>
+          </h3>
+          <p>
+            Take advantage of our brand new Glamping pods for your next
+            getaway.
+          </p>
+          <p>
+            Glamping Pod Prices Vary from Duration / Time of Year. Please get
+            in touch to discuss your booking!
+          </p>
         </div>
       </div>
     </div>
@@ -89,13 +106,16 @@
     <div class="container-fluid container-footer">
       <div class="row align-items-center">
         <div class="col">
-          <a href="http://facebook.com" rel="noopener" target="_blank"> <i class="fab fa-facebook"></i></a>
+          <a href="http://facebook.com" rel="noopener" target="_blank">
+            <i class="fab fa-facebook"></i></a>
         </div>
         <div class="col">
-          <a href="http://twitter.com" rel="noopener" target="_blank"> <i class="fab fa-twitter"></i></a>
+          <a href="http://twitter.com" rel="noopener" target="_blank">
+            <i class="fab fa-twitter"></i></a>
         </div>
         <div class="col">
-          <a href="http://instagram.com" rel="noopener" target="_blank"> <i class="fab fa-instagram"></i></a>
+          <a href="http://instagram.com" rel="noopener" target="_blank">
+            <i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
@@ -103,7 +123,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
   </script>
-
 </body>
 
 </html>
