--- a/activities.html
+++ b/activities.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet">
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <title>Thoresby Vale Country Park</title>
 </head>
 
@@ -28,50 +28,55 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" aria-current="page"
+                        <a class="nav-link nav-link-custom" style="color: yellow" aria-current="page"
                             href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom active" style="color:yellow"
+                        <a class="nav-link nav-link-custom active" style="color: yellow"
                             href="activities.html">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" href="area.html">Area</a>
+                        <a class="nav-link nav-link-custom" style="color: yellow" href="area.html">Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" href="contact.html">Contact</a>
+                        <a class="nav-link nav-link-custom" style="color: yellow" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <section>
-        <br>
+        <br />
         <div class="container activities">
             <div class="row row-contain">
                 <div class="col activity-text">
                     <h3>Cycling Courses <i class="fas fa-biking"></i></h3>
-                    <p>We have six routes designed for all experience levels and ages.
-                        There is a selection of bikes to rent (these will require pre-booking before your visit) if you
-                        need to do so.
-                        We have placed numerous amounts of drink stations and toilets around the park.
-                        All facilities will be marked on a map given to you on entrance to the park so please keep this
-                        with you.
-                        Please see all routes below - </p>
+                    <p>
+                        We have six routes designed for all experience levels and ages.
+                        There is a selection of bikes to rent (these will require
+                        pre-booking before your visit) if you need to do so. We have
+                        placed numerous amounts of drink stations and toilets around the
+                        park. All facilities will be marked on a map given to you on
+                        entrance to the park so please keep this with you. Please see all
+                        routes below -
+                    </p>
                     <ul class="cycling-routes">
-                        <li>Beginner Routes
+                        <li>
+                            Beginner Routes
                             <ul class="routes">
                                 <li>Robin Hood Sprint</li>
                                 <li>Sherwood Corner</li>
                             </ul>
                         </li>
-                        <li>Intermediate Routes
+                        <li>
+                            Intermediate Routes
                             <ul class="routes">
                                 <li>Lady Marian Way</li>
                                 <li>Miners Climb</li>
                             </ul>
                         </li>
-                        <li>Extreme Routes
+                        <li>
+                            Extreme Routes
                             <ul class="routes">
                                 <li>Thoresby Colliery Rush</li>
                                 <li>Mountain Sprint</li>
@@ -83,22 +88,26 @@
             <div class="row row-contain">
                 <div class="col activity-text">
                     <h3>Hiking Routes <i class="fas fa-hiking"></i></h3>
-                    <p>Explore the 500 acre park through our beautiful hiking routes. Our hiking routes have drinks
-                        stations and toilets dotted around so no need to worry. Our team of rangers are consistently
-                        driving round the park doing their day to day roles, but fear not they are there to help you
-                        if needs be.
-                        <br>
-                        We suggest you cater 3 hours of your day... if you wish to see everything the park has to offer.
+                    <p>
+                        Explore the 500 acre park through our beautiful hiking routes. Our
+                        hiking routes have drinks stations and toilets dotted around so no
+                        need to worry. Our team of rangers are consistently driving round
+                        the park doing their day to day roles, but fear not they are there
+                        to help you if needs be.
+                        <br />
+                        We suggest you cater 3 hours of your day... if you wish to see
+                        everything the park has to offer.
                     </p>
                 </div>
             </div>
             <div class="row row-contain">
                 <div class="col-12 activity-text">
                     <h3>Glamping Site <i class="fas fa-campground"></i></h3>
-                    <img src="assets/images/pod.jpg" class="pod" alt="glamping pod rental">
-                    <p>We have 15 glamping pods available to book now. All glamping customers get free entry into
-                        the park.
-                        <br>
+                    <img src="assets/images/pod.jpg" class="pod" alt="glamping pod rental" />
+                    <p>
+                        We have 15 glamping pods available to book now. All glamping
+                        customers get free entry into the park.
+                        <br />
                         All Pods Include -
                     </p>
                     <ul>
@@ -142,13 +151,16 @@
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
                 <div class="col">
-                    <a href="http://facebook.com" rel="noopener" target="_blank"> <i class="fab fa-facebook"></i></a>
+                    <a href="http://facebook.com" rel="noopener" target="_blank">
+                        <i class="fab fa-facebook"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://twitter.com" rel="noopener" target="_blank"> <i class="fab fa-twitter"></i></a>
+                    <a href="http://twitter.com" rel="noopener" target="_blank">
+                        <i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://instagram.com" rel="noopener" target="_blank"> <i class="fab fa-instagram"></i></a>
+                    <a href="http://instagram.com" rel="noopener" target="_blank">
+                        <i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
