--- a/area.html
+++ b/area.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet">
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <title>Thoresby Vale Country Park</title>
 </head>
 
@@ -28,17 +28,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" aria-current="page"
+                        <a class="nav-link nav-link-custom" style="color: yellow" aria-current="page"
                             href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" href="activities.html">Activities</a>
+                        <a class="nav-link nav-link-custom" style="color: yellow" href="activities.html">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom active" style="color:yellow" href="area.html">Area</a>
+                        <a class="nav-link nav-link-custom active" style="color: yellow" href="area.html">Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-custom" style="color:yellow" href="contact.html">Contact</a>
+                        <a class="nav-link nav-link-custom" style="color: yellow" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -49,17 +49,22 @@
             <div class="row">
                 <div class="col-sm video-text">
                     <h3>Thoresby Vale New Build Village</h3>
-                    <p>Thoresby Vale is a brand new development situated in Edwinstowe. Thoresby Vale is set to home the
-                        following...</p>
+                    <p>
+                        Thoresby Vale is a brand new development situated in Edwinstowe.
+                        Thoresby Vale is set to home the following...
+                    </p>
                     <ul>
-                        <li>800 Brand New Homes from Leading Housing Developers
+                        <li>
+                            800 Brand New Homes from Leading Housing Developers
                             <ul class="developers">
-                                <li><a href="https://www.harronhomes.com/find-a-home/nottinghamshire/thoresby-vale/"
-                                        target="_blank">Harron
-                                        Homes</a></li>
-                                <li><a href="https://www.dwh.co.uk/new-homes/nottinghamshire/h806601-thoresby-vale/"
-                                        target="_blank">David
-                                        Wilson Homes</a>
+                                <li>
+                                    <a href="https://www.harronhomes.com/find-a-home/nottinghamshire/thoresby-vale/"
+                                        target="_blank">Harron Homes</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.dwh.co.uk/new-homes/nottinghamshire/h806601-thoresby-vale/"
+                                        target="_blank">David Wilson Homes</a>
+                                </li>
                             </ul>
                         </li>
                         <li>Doctors Surgery & Dentist Practise</li>
@@ -80,10 +85,13 @@
             <div class="row row-robin-hood">
                 <div class="col">
                     <h3>The Famous Robin Hood</h3>
-                    <p>Robin Hood is an iconic figure to the Nottinghamshire area. He was known to be a crafty
-                        archer and sword fighter. Robin Hood is believed to of taken residence in the 'Major Oak'.
-                        It is believed Robin Hood was in a regular battle over his lands and would steal from the
-                        rich to provide for the poor.</p>
+                    <p>
+                        Robin Hood is an iconic figure to the Nottinghamshire area. He was
+                        known to be a crafty archer and sword fighter. Robin Hood is
+                        believed to of taken residence in the 'Major Oak'. It is believed
+                        Robin Hood was in a regular battle over his lands and would steal
+                        from the rich to provide for the poor.
+                    </p>
                 </div>
             </div>
         </div>
@@ -92,12 +100,12 @@
                 <div class="col-lg">
                     <h3>The Major Oak</h3>
                     <p>Robin Hoods Residence</p>
-                    <img src="assets/images/major-oak.jpg" alt="The Major Oak">
+                    <img src="assets/images/major-oak.jpg" alt="The Major Oak" />
                 </div>
                 <div class="col-lg">
                     <h3>Robin Hood Statue</h3>
                     <p>Always found with a Bow and Arrow in hand.</p>
-                    <img src="assets/images/robin-hood.jpg" alt="Robin Hood Statue">
+                    <img src="assets/images/robin-hood.jpg" alt="Robin Hood Statue" />
                 </div>
             </div>
         </div>
@@ -107,13 +115,16 @@
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
                 <div class="col">
-                    <a href="http://facebook.com" rel="noopener" target="_blank"> <i class="fab fa-facebook"></i></a>
+                    <a href="http://facebook.com" rel="noopener" target="_blank">
+                        <i class="fab fa-facebook"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://twitter.com" rel="noopener" target="_blank"> <i class="fab fa-twitter"></i></a>
+                    <a href="http://twitter.com" rel="noopener" target="_blank">
+                        <i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://instagram.com" rel="noopener" target="_blank"> <i class="fab fa-instagram"></i></a>
+                    <a href="http://instagram.com" rel="noopener" target="_blank">
+                        <i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -121,7 +132,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
-
 </body>
 
 </html>
