--- a/activities.html
+++ b/activities.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!--bootstrap navigation-->
+    <!--------------------------bootstrap navigation-------------------------->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" id="logo" href="index.html">Thoresby Vale Country Park</a>
@@ -45,6 +45,7 @@
             </div>
         </div>
     </nav>
+    <!--------------------------actvities section-------------------------->
     <section>
         <br />
         <div class="container activities">
@@ -146,7 +147,7 @@
             </div>
         </div>
     </section>
-    <!--footer section-->
+    <!--------------------------footer section-------------------------->
     <footer>
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
