--- a/area.html
+++ b/area.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!--bootstrap navigation-->
+    <!--------------------------bootstrap navigation-------------------------->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" id="logo" href="index.html">Thoresby Vale Country Park</a>
@@ -44,6 +44,7 @@
             </div>
         </div>
     </nav>
+    <!--------------------------Thoresby vale village section-------------------------->
     <section>
         <div class="container container-video">
             <div class="row">
@@ -80,6 +81,7 @@
             </div>
         </div>
     </section>
+    <!--------------------------robin hood description section-------------------------->
     <section>
         <div class="container">
             <div class="row row-robin-hood">
@@ -110,7 +112,7 @@
             </div>
         </div>
     </section>
-    <!--footer section-->
+    <!--------------------------footer section-------------------------->
     <footer>
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
