--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!--bootstrap navigation-->
+    <!--------------------------bootstrap navigation-------------------------->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" id="logo" href="index.html">Thoresby Vale Country Park</a>
@@ -44,6 +44,7 @@
             </div>
         </div>
     </nav>
+    <!--------------------------contact form section-------------------------->
     <section>
         <div class="container">
             <form action="index.html" method="GET">
@@ -85,7 +86,7 @@
             </form>
         </div>
     </section>
-    <!--footer section-->
+    <!--------------------------footer section-------------------------->
     <footer>
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
