--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row row-home">
         <div class="col welcome">
           <h3>
-            <i class="fas fa-tree"></i> The Thoresby Vale Experience
+            <i class="fas fa-tree"></i> Thoresby Vale Experience
             <i class="fas fa-tree"></i>
           </h3>
           <p>
@@ -86,7 +86,7 @@
             redeemable at the Miners Cafe*
           </p>
           <h3>
-            <i class="fas fa-campground"></i> Why not extend your stay?
+            <i class="fas fa-campground"></i> Stay with us
             <i class="fas fa-campground"></i>
           </h3>
           <p>
