BUG (activities page iframe google map not moveable) FIX - assign same class as contact page map

--- a/activities.html
+++ b/activities.html
@@ -144,7 +144,7 @@
                         <li>Launays Tapas and Bar</li>
                         <li>Smoke&Ice Bar and Restaraunt</li>
                     </ul>
-                    <iframe id="edwinstowe-map"
+                    <iframe class="map"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d76501.28535641897!2d-1.0650790000000003!3d53.187986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879b06bfa8afb65%3A0x50e1ca8bbc34700!2sEdwinstowe%2C%20Mansfield!5e0!3m2!1sen!2suk!4v1633457203309!5m2!1sen!2suk"></iframe>
                 </div>
             </div>
