html warning for no heading on form section from validator,, added a h3 contact to the form

--- a/area.html
+++ b/area.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!--------------------------bootstrap navigation-------------------------->
+    <!--bootstrap navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" id="logo" href="index.html">Thoresby Vale Country Park</a>
@@ -47,7 +47,7 @@
             </div>
         </div>
     </nav>
-    <!--------------------------Thoresby vale village section-------------------------->
+    <!--Thoresby vale village section-->
     <section>
         <div class="container container-video">
             <div class="row">
@@ -84,7 +84,7 @@
             </div>
         </div>
     </section>
-    <!--------------------------robin hood description section-------------------------->
+    <!--robin hood description section-->
     <section>
         <div class="container">
             <div class="row row-robin-hood">
@@ -115,7 +115,7 @@
             </div>
         </div>
     </section>
-    <!--------------------------footer section-------------------------->
+    <!--footer section-->
     <footer>
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
