--- a/activities.html
+++ b/activities.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!--------------------------bootstrap navigation-------------------------->
+    <!--bootstrap navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" id="logo" href="index.html">Thoresby Vale Country Park</a>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </nav>
-    <!--------------------------actvities section-------------------------->
+    <!--actvities section-->
     <section>
         <br />
         <div class="container activities">
@@ -150,7 +150,7 @@
             </div>
         </div>
     </section>
-    <!--------------------------footer section-------------------------->
+    <!--footer section-->
     <footer>
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
