--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!--------------------------bootstrap navigation-------------------------->
+    <!--bootstrap navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" id="logo" href="index.html">Thoresby Vale Country Park</a>
@@ -47,12 +47,13 @@
             </div>
         </div>
     </nav>
-    <!--------------------------contact form section-------------------------->
+    <!--contact form section-->
     <section>
         <div class="container">
             <form action="index.html" method="GET">
                 <div class="row contact">
                     <div class="col-12">
+                        <h3>Contact</h3>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">First Name</label>
                             <input type="text" class="form-control" id="exampleFormControlInput1"
@@ -89,7 +90,7 @@
             </form>
         </div>
     </section>
-    <!--------------------------footer section-------------------------->
+    <!--footer section-->
     <footer>
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
