--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <!--------------------------bootstrap navigation-------------------------->
+  <!--bootstrap navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" id="logo" href="index.html">Thoresby Vale Country Park</a>
@@ -46,7 +46,7 @@
       </div>
     </div>
   </nav>
-  <!--------------------------central images and headers section-------------------------->
+  <!--central images and headers section-->
   <section class="main-grid">
     <div class="container-fluid">
       <div class="row">
@@ -66,7 +66,7 @@
       <br />
     </div>
   </section>
-  <!--------------------------introduction text section-------------------------->
+  <!--introduction text section-->
   <section>
     <div class="container-fluid">
       <div class="row row-home">
@@ -101,7 +101,7 @@
       </div>
     </div>
   </section>
-  <!--------------------------footer section-------------------------->
+  <!--footer section-->
   <footer>
     <div class="container-fluid container-footer">
       <div class="row align-items-center">
