text area placeholder text wasnt showing - fix issue with textarea end tags, now showing

--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,7 @@
                             <label for="exampleFormControlTextarea1" class="form-label">Your Enquiry</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"
                                 placeholder="Please enter your enquiry (including booking dates if applicable)"
-                                required>
-								</textarea>
+                                required></textarea>
                         </div>
                         <input class="btn-custom" type="submit" value="Submit" />
                         <input class="btn-custom" type="reset" value="Reset" />
