--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     </nav>
-    <!--contact form section-->
+    <!--contact form section bootstrap / custom-->
     <section>
         <div class="container">
             <form action="index.html" method="GET">
